# docs/swagger.yaml
@@ -408,6 +408,46 @@ paths:
       summary: Загрузить аватар
       tags:
       - Applicant
+  /applicant/emailExists:
+    post:
+      consumes:
+      - application/json
+      description: Проверяет, есть ли работодатель с таким email
+      parameters:
+      - description: Email для проверки
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/dto.EmailExistsRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.EmailExistsResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.APIError'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/utils.APIError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/utils.APIError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/utils.APIError'
+      security:
+      - csrf_token: []
+      summary: Проверка email
+      tags:
+      - Applicant
   /applicant/login:
     post:
       consumes:
@@ -567,46 +607,6 @@ paths:
       summary: Регистрация соискателя
       tags:
       - Applicant
-  /auth/emailExists:
-    post:
-      consumes:
-      - application/json
-      description: Проверяет, зарегистрирован ли email в системе
-      parameters:
-      - description: Email для проверки
-        in: body
-        name: input
-        required: true
-        schema:
-          $ref: '#/definitions/dto.EmailExistsRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/dto.EmailExistsResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/utils.APIError'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/utils.APIError'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/utils.APIError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/utils.APIError'
-      security:
-      - csrf_token: []
-      summary: Проверка email
-      tags:
-      - Auth
   /auth/isAuth:
     get:
       description: Проверяет авторизован пользователь или нет.
@@ -666,6 +666,46 @@ paths:
       summary: Выход со всех устройств
       tags:
       - Auth
+  /employer/emailExists:
+    post:
+      consumes:
+      - application/json
+      description: Проверяет, есть ли работодатель с таким email
+      parameters:
+      - description: Email для проверки
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/dto.EmailExistsRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.EmailExistsResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.APIError'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/utils.APIError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/utils.APIError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/utils.APIError'
+      security:
+      - csrf_token: []
+      summary: Проверка email
+      tags:
+      - Employer
   /employer/login:
     post:
       consumes:
