# internal/transport/http/applicant.go
@@ -32,6 +32,7 @@ func (h *ApplicantHandler) Configure(r *http.ServeMux) {
 	applicantMux.HandleFunc("GET /profile/{id}", h.GetProfile)
 	applicantMux.HandleFunc("PUT /profile", h.UpdateProfile)
 	applicantMux.HandleFunc("POST /avatar", h.UploadAvatar)
+	applicantMux.HandleFunc("POST /emailExists", h.EmailExists)
 
 	r.Handle("/applicant/", http.StripPrefix("/applicant", applicantMux))
 }
@@ -294,6 +295,43 @@ func (h *ApplicantHandler) UploadAvatar(w http.ResponseWriter, r *http.Request) 
 	}
 
 	if err = json.NewEncoder(w).Encode(avatar); err != nil {
+		utils.WriteError(w, http.StatusInternalServerError, entity.ErrInternal)
+		return
+	}
+}
+
+// EmailExists godoc
+// @Tags Applicant
+// @Summary Проверка email
+// @Description Проверяет, есть ли работодатель с таким email
+// @Accept json
+// @Produce json
+// @Param input body dto.EmailExistsRequest true "Email для проверки"
+// @Success 200 {object} dto.EmailExistsResponse
+// @Failure 400 {object} utils.APIError
+// @Failure 403 {object} utils.APIError
+// @Failure 404 {object} utils.APIError
+// @Failure 500 {object} utils.APIError
+// @Router /applicant/emailExists [post]
+// @Security csrf_token
+func (h *ApplicantHandler) EmailExists(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	var emailDTO dto.EmailExistsRequest
+	err := json.NewDecoder(r.Body).Decode(&emailDTO)
+	if err != nil {
+		utils.WriteError(w, http.StatusBadRequest, entity.ErrBadRequest)
+		return
+	}
+
+	response, err := h.applicant.EmailExists(ctx, emailDTO.Email)
+	if err != nil {
+		utils.WriteAPIError(w, utils.ToAPIError(err))
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	if err = json.NewEncoder(w).Encode(response); err != nil {
 		utils.WriteError(w, http.StatusInternalServerError, entity.ErrInternal)
 		return
 	}
